Tiny CSS z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,7 @@ nav ul{
 	padding-bottom: 20px;
 	padding-top: 20px;
 	position: sticky;
+  z-index: 1;
 	top: 0;
 }
 
